--- a/Visual Condition Pipeline.ipynb
+++ b/Visual Condition Pipeline.ipynb
@@ -21,98 +21,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5b058de7",
+   "metadata": {},
+   "source": [
+    "Import visual condition data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "8be62093",
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_excel(r'C:\\Users\\robert.everitt\\OneDrive - National Grid\\Data Engineering Course\\Data\\VI_E0309B_Test.xlsx')\n",
+    "\n",
+    "#remove leading and trailing whitespace\n",
     "df.columns = df.columns.str.strip()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5b4b3e90",
+   "metadata": {},
+   "source": [
+    "Import importance scores for questions"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "0deaa006",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_importance = pd.read_excel(r'C:\\Users\\robert.everitt\\OneDrive - National Grid\\Data Engineering Course\\Data\\Importance_Scores.xlsx')\n",
+    "\n",
+    "#remove leading and trailing whitespace\n",
     "df_importance.columns = df_importance.columns.str.strip()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b1f79a7c",
+   "metadata": {},
+   "source": [
+    "import script versions"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "45b2c0a8",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_Script_Versions = pd.read_excel(r'C:\\Users\\robert.everitt\\OneDrive - National Grid\\Data Engineering Course\\Data\\Script_Versions.xlsx')\n",
-    "#df_Script_Versions = df_Script_Versions.columns.str.strip()\n",
     "\n",
-    "df_Script_Versions = pd.DataFrame(df_Script_Versions)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "3def9998",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "       Script ID  Script Version Number\n",
-      "0       RVARECAA                      3\n",
-      "1   RVI_BIDEFECT                      2\n",
-      "2     RVI_DEFECT                      7\n",
-      "3     RVI_GANDEF                      4\n",
-      "4   RVI_TCDEFECT                      1\n",
-      "5   RVI_TRDEFECT                      2\n",
-      "6      RVIABCBAA                      8\n",
-      "7        RVIBHAA                      7\n",
-      "8      RVIBUSHAA                      1\n",
-      "9       RVICSEAA                     10\n",
-      "10       RVICTAA                      8\n",
-      "11      RVIDISAA                      8\n",
-      "12      RVIEATAA                      2\n",
-      "13       RVIESAA                      7\n",
-      "14      RVIGCBAA                      7\n",
-      "15       RVIGZAA                      5\n",
-      "16      RVIMSCAA                      4\n",
-      "17       RVINEAA                      4\n",
-      "18      RVIOCBAA                      5\n",
-      "19       RVIQBAA                      1\n",
-      "20     RVIREACAA                      2\n",
-      "21       RVISAAA                      5\n",
-      "22      RVISGTAA                      8\n",
-      "23      RVISPIAA                      6\n",
-      "24      RVITWBAA                      2\n",
-      "25      RVIVCTAA                      4\n",
-      "26       RVIVTAA                      6\n",
-      "27    RVSBUILDAA                      9\n",
-      "28      RVSCIVAA                      4\n",
-      "29    RVSFENCEAA                      9\n",
-      "30      RVSGANAA                      3\n",
-      "31       RVSRDAA                      9\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(df_Script_Versions)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "d9760c39",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "##### Check Script versions in dataset #####"
+    "#remove leading and trailing whitespace\n",
+    "df_Script_Versions = df_Script_Versions.columns.str.strip()\n"
    ]
   },
   {
@@ -124,16 +92,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7427f6ed",
+   "metadata": {},
+   "source": [
+    "Define a function to Find the first row containing 'search_text', remove rows above it, and set it as column names."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "263fd55e",
    "metadata": {},
    "outputs": [],
    "source": [
     "def clean_dataframe(df, search_text):\n",
-    "    \"\"\"\n",
-    "    Find the first row containing 'search_text', remove rows above it, and set it as column names.\n",
-    "    \"\"\"\n",
+    "\n",
     "    # Find the index of the first occurrence of the search text\n",
     "    idx = df[df.apply(lambda row: row.astype(str).str.contains(search_text, case=False).any(), axis=1)].index\n",
     "    \n",
@@ -151,6 +125,14 @@
     "    df = df[1:].reset_index(drop=True)\n",
     "    \n",
     "    return df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "427e287c",
+   "metadata": {},
+   "source": [
+    "Define a function to check if Script Activity IDs all have unique date"
    ]
   },
   {
@@ -188,6 +170,14 @@
     "        return {'consistent': True}\n",
     "    else:\n",
     "        return {'consistent': False, 'violating_references': violating_references}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03b3cdb7",
+   "metadata": {},
+   "source": [
+    "Define a function to return the maximum script version or each script in the visual condition data, for comparision with those in df_Script_Versions. If script version in data is higher, this will need checking to ensure there is still an importance score for all questions"
    ]
   },
   {
@@ -230,26 +220,38 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "8421f051",
+   "cell_type": "markdown",
+   "id": "f009249c",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#*Main code*\n",
-    "\n",
-    "df_clean = clean_dataframe(df,'Location Code')"
+    "User defined function to remove blank rows at the top and set columns headers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "id": "8421f051",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_clean = clean_dataframe(df,'Location Code')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f62029e",
+   "metadata": {},
+   "source": [
+    "Define column types"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "221db572",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define column types\n",
-    "\n",
     "date_columns = ['Inspection Date']\n",
     "int_columns = ['Response Score', 'Script Item Number']\n",
     "string_columns = ['Location Code','Plant Number','Installed Component','Installed Modifier','Script ID', \n",
@@ -2606,7 +2608,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "RME_env",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -2620,7 +2622,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
