--- a/Visual Condition Pipeline.ipynb
+++ b/Visual Condition Pipeline.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "8be62093",
    "metadata": {},
    "outputs": [
@@ -65,8 +65,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-10-13 15:44:31,217 - INFO - Attempting to read data from C:\\Users\\robert.everitt\\OneDrive - National Grid\\Data Engineering Course\\Data\\VI_E0309B_Test.xlsx\n",
-      "2025-10-13 15:44:34,346 - INFO - Sucessully read data\n"
+      "2025-11-03 16:46:25,041 - INFO - Attempting to read data from C:\\Users\\robert.everitt\\OneDrive - National Grid\\Data Engineering Course\\Data\\VI_E0309B_Test.xlsx\n",
+      "2025-11-03 16:46:28,423 - INFO - Sucessully read data\n"
      ]
     }
    ],
@@ -1556,7 +1556,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "RMEvenv",
    "language": "python",
    "name": "python3"
   },
@@ -1570,7 +1570,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.13.6"
   }
  },
  "nbformat": 4,
